gc/cslocker/TestCSLocker.java crashes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • gc
    • b07
    • x86_64

      sleeping...
      sleeping...
      sleeping...
      sleeping...
      sleeping...
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f72a21025e9, pid=14960, tid=14963
      #
      # JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-jdk11-hs.185)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-jdk11-hs.185, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xfbe5e9] jni_GetPrimitiveArrayCritical+0x1c9

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Mikael Vidstedt
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: