8199886: gc/cslocker/TestCSLocker.java crashes

Reviewed-by: rkennke, kbarrett